--- a/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
+++ b/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:29:16 GMT
+    - Thu, 22 Jun 2017 19:19:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2%2CwsYsPCIdWENho3%2CxEkQ0; path=/
+    - PHPSESSID=zpHrfHQAG8ppL8Lev5%2CJa2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:29:16 GMT
+recorded_at: Thu, 22 Jun 2017 19:19:40 GMT
