--- a/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
+++ b/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:32:51 GMT
+    - Thu, 22 Jun 2017 19:22:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J816cJ1YpZi6U-%2CJygwVd3; path=/
+    - PHPSESSID=pe64QkYWgybiTPAId0u8A1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:32:51 GMT
+recorded_at: Thu, 22 Jun 2017 19:22:53 GMT
