--- a/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
+++ b/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:35:56 GMT
+    - Thu, 22 Jun 2017 19:25:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zz2BGIZ1Oor8DfZw6Y2Wn2; path=/
+    - PHPSESSID=vqoLjCza0hRue%2Cp3dDPHh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:35:56 GMT
+recorded_at: Thu, 22 Jun 2017 19:25:07 GMT
