--- a/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
+++ b/www.nass.gov.ng/25e90f8b2b68218038c54dba2b366a0c707d2407.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:39:08 GMT
+    - Thu, 22 Jun 2017 19:28:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4tRv7DTkESljvo8Kc8bCK2; path=/
+    - PHPSESSID=Yvb02YfkjdJu%2Cl7eTSk0I0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:39:08 GMT
+recorded_at: Thu, 22 Jun 2017 19:28:30 GMT
