--- a/www.nass.gov.ng/67c50a28ca95eec9376d51cb73829a29fcc6f1ca.yml
+++ b/www.nass.gov.ng/67c50a28ca95eec9376d51cb73829a29fcc6f1ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:45:04 GMT
+    - Thu, 22 Jun 2017 19:32:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gsOrZT%2C8WLXfH0E4hCZ0N1; path=/
+    - PHPSESSID=wkBrTHpwNCgQwXwOv7KwA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:45:04 GMT
+recorded_at: Thu, 22 Jun 2017 19:32:46 GMT
