--- a/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
+++ b/www.nass.gov.ng/fdbcc7e697ea6d712da778ebaded03eeb692f5ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:45:56 GMT
+    - Thu, 22 Jun 2017 19:34:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JDH04SFOtzioIdJdRBt8e2; path=/
+    - PHPSESSID=SY2-XExmfED1fluBO%2C14w2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:45:56 GMT
+recorded_at: Thu, 22 Jun 2017 19:34:02 GMT
