--- a/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
+++ b/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:51:04 GMT
+    - Thu, 22 Jun 2017 19:40:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SJlWRMtVQ5eu3575%2CH7v20; path=/
+    - PHPSESSID=WmmFSXiX5X09BumfpEhSa1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:51:04 GMT
+recorded_at: Thu, 22 Jun 2017 19:40:30 GMT
