--- a/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
+++ b/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 01:54:25 GMT
+    - Thu, 22 Jun 2017 19:43:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ztb6c2UPxbZkDcdH%2C8zKS2; path=/
+    - PHPSESSID=ZPAIEgTDjO0W9BOIWiCO23; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 01:54:25 GMT
+recorded_at: Thu, 22 Jun 2017 19:43:28 GMT
