--- a/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
+++ b/www.nass.gov.ng/9126db741cb9da37fc8f926acb20106ebe2be03e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:01:49 GMT
+    - Thu, 22 Jun 2017 19:50:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1wVs2vkbXP9h5-z9OPeA%2C2; path=/
+    - PHPSESSID=74c4dSlJZvmbPYX87KJEq3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:01:49 GMT
+recorded_at: Thu, 22 Jun 2017 19:50:20 GMT
