--- a/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
+++ b/www.nass.gov.ng/3fa8bcddcd701d4398f33bc5fc782be894584cc0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:02:34 GMT
+    - Thu, 22 Jun 2017 19:50:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nAc1gmRnlqagctQmDvvbL2; path=/
+    - PHPSESSID=t75%2CVGCOnLPGF3dJcQnnA0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:02:34 GMT
+recorded_at: Thu, 22 Jun 2017 19:50:54 GMT
