--- a/www.nass.gov.ng/234f08d83d3c8e829df23133fd90014612339a2f.yml
+++ b/www.nass.gov.ng/234f08d83d3c8e829df23133fd90014612339a2f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:04:29 GMT
+    - Thu, 22 Jun 2017 19:52:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=P%2CzIT459fqrxP7g8BS9XT1; path=/
+    - PHPSESSID=Kf9nlacLY2UbyjkceOejC3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:04:29 GMT
+recorded_at: Thu, 22 Jun 2017 19:52:56 GMT
