--- a/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
+++ b/www.nass.gov.ng/fbc433dcdf277837d2aca741990bdf8431cbb502.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:05:18 GMT
+    - Thu, 22 Jun 2017 19:54:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GcR%2Cp1QAK1%2CBbidXg86Du0; path=/
+    - PHPSESSID=tPeG9khoN1tND%2C21I7JH03; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:05:18 GMT
+recorded_at: Thu, 22 Jun 2017 19:54:17 GMT
