--- a/www.nass.gov.ng/79b8027933a14c2146e4ea7305a81cfab4211992.yml
+++ b/www.nass.gov.ng/79b8027933a14c2146e4ea7305a81cfab4211992.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:10:15 GMT
+    - Thu, 22 Jun 2017 19:58:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qbSNo-hDxtDq9zyvlMxUb3; path=/
+    - PHPSESSID=09sWbglP%2CcWaI6KQ22G1U1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:10:15 GMT
+recorded_at: Thu, 22 Jun 2017 19:58:30 GMT
