--- a/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
+++ b/www.nass.gov.ng/f1dd2e4c77e8e4748f6f63b47f301bc1387b7a1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:14:38 GMT
+    - Thu, 22 Jun 2017 20:02:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ojgg5hDCtoH8c%2C3bVO9R-1; path=/
+    - PHPSESSID=4fHcpzcB65VRBQi-ThgwU1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:14:38 GMT
+recorded_at: Thu, 22 Jun 2017 20:02:37 GMT
