--- a/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
+++ b/www.nass.gov.ng/517e92a997c1cf4107ce1be46fae54d3b77495a9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:15:36 GMT
+    - Thu, 22 Jun 2017 20:02:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DK-OvnYhdZNQwUwTu9n4C0; path=/
+    - PHPSESSID=H6ATafZ9cg7hc0M5%2CP9yO3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:15:36 GMT
+recorded_at: Thu, 22 Jun 2017 20:02:58 GMT
