--- a/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
+++ b/www.nass.gov.ng/f19366f7fb5112efeee244b98da420d87ddd7414.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:19:05 GMT
+    - Thu, 22 Jun 2017 20:04:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wOewFGbPutpwb33nBNaJc0; path=/
+    - PHPSESSID=huzJUpIr1xGhIyys%2CFE%2CZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:19:05 GMT
+recorded_at: Thu, 22 Jun 2017 20:04:23 GMT
