--- a/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
+++ b/www.nass.gov.ng/20cbeb332c3a9e941fa40fd2f16a7cf30d5a218b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:19:24 GMT
+    - Thu, 22 Jun 2017 20:04:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rMkSPGjrO-sUrk9h1D6eU0; path=/
+    - PHPSESSID=cQfPqmQQa5GT%2Co9TacJmk0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:19:24 GMT
+recorded_at: Thu, 22 Jun 2017 20:04:49 GMT
