--- a/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
+++ b/www.nass.gov.ng/f02e2aa51335041bf4055d08c557f3a8010284f5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:22:55 GMT
+    - Thu, 22 Jun 2017 20:06:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NWWRM4j1fKmR2ZjgxhElj1; path=/
+    - PHPSESSID=f4B9vJ%2CYC47w145WGTDCQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:22:55 GMT
+recorded_at: Thu, 22 Jun 2017 20:06:41 GMT
