--- a/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
+++ b/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:23:55 GMT
+    - Thu, 22 Jun 2017 20:07:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FzilJCfI-2klJYbGCmf%2Cb0; path=/
+    - PHPSESSID=KFUuKzEVJy9Dk6SpPceoE3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:23:55 GMT
+recorded_at: Thu, 22 Jun 2017 20:07:47 GMT
