--- a/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
+++ b/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:30:40 GMT
+    - Thu, 22 Jun 2017 20:13:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WrcodrRcB6-JZ9n%2ClEtiY1; path=/
+    - PHPSESSID=24soLP-OwiaJODGyj3JaS0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:30:41 GMT
+recorded_at: Thu, 22 Jun 2017 20:13:44 GMT
