--- a/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
+++ b/www.nass.gov.ng/63227f1fa39322cedc86080c2e43ec313c243db3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:31:32 GMT
+    - Thu, 22 Jun 2017 20:14:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tN9iz2jvHQn8aCmt%2CensG3; path=/
+    - PHPSESSID=-KJjDtmMZ3SPlA6E4sg1t1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:31:33 GMT
+recorded_at: Thu, 22 Jun 2017 20:14:26 GMT
