--- a/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
+++ b/www.nass.gov.ng/7cfab7ec2fd762b811a986ed13fa679909c9a07d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:34:15 GMT
+    - Thu, 22 Jun 2017 20:17:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Wa9Zbqh2rGs2K9BMB7K1m0; path=/
+    - PHPSESSID=gAtb2BW1ljd%2CH-H0zBnjf0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:34:16 GMT
+recorded_at: Thu, 22 Jun 2017 20:17:29 GMT
