--- a/www.nass.gov.ng/33395167a5bb436c7b948cc0a41e9784244c5c8c.yml
+++ b/www.nass.gov.ng/33395167a5bb436c7b948cc0a41e9784244c5c8c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:35:59 GMT
+    - Thu, 22 Jun 2017 20:19:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nH5uiU3LDG1SJ5L%2CE3Ylm3; path=/
+    - PHPSESSID=0Pdw0IHTYadQ0pgs49KKB0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:35:59 GMT
+recorded_at: Thu, 22 Jun 2017 20:19:21 GMT
