--- a/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
+++ b/www.nass.gov.ng/70addde23cf6668cb27ce9e8e830467349174ca6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:37:00 GMT
+    - Thu, 22 Jun 2017 20:20:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ME-Z51L9Gr-Ayj8DNGr1B0; path=/
+    - PHPSESSID=e3mK0LVza%2C1XMOXpoUh%2Ce0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:37:00 GMT
+recorded_at: Thu, 22 Jun 2017 20:20:44 GMT
