--- a/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
+++ b/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:52:38 GMT
+    - Thu, 22 Jun 2017 20:36:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tke%2Cr2jLhRVPfCzBY-gHN3; path=/
+    - PHPSESSID=FUnoy1FmvDI7DFN3rc2oP3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:52:38 GMT
+recorded_at: Thu, 22 Jun 2017 20:36:44 GMT
