--- a/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
+++ b/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:54:38 GMT
+    - Thu, 22 Jun 2017 20:38:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mdAVCg-sXoo6A8rsIP4SN3; path=/
+    - PHPSESSID=S9A%2C5l1pvZ83QyXmQvSue0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:54:38 GMT
+recorded_at: Thu, 22 Jun 2017 20:38:15 GMT
