--- a/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
+++ b/www.nass.gov.ng/d3db04dfd302ba4b1beaf1aba989666a803c3593.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 02:54:56 GMT
+    - Thu, 22 Jun 2017 20:39:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=db35L%2ChIGBPLjN7ibghsu2; path=/
+    - PHPSESSID=Y67PHc28TaaD8EOctdNHU0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 02:54:56 GMT
+recorded_at: Thu, 22 Jun 2017 20:39:01 GMT
