--- a/www.nass.gov.ng/2eb37f2d855bfca97c080fda09ea6863e61cf757.yml
+++ b/www.nass.gov.ng/2eb37f2d855bfca97c080fda09ea6863e61cf757.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:05:43 GMT
+    - Thu, 22 Jun 2017 20:52:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PqtqhZirLszP7Q8uqi8Pt1; path=/
+    - PHPSESSID=5Hn%2CRscjS2vHm6tAFQ6%2C-0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:05:43 GMT
+recorded_at: Thu, 22 Jun 2017 20:52:02 GMT
