--- a/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
+++ b/www.nass.gov.ng/23e541f20eac3f325439a1522985f6b8e2f140cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:06:13 GMT
+    - Thu, 22 Jun 2017 20:52:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nx9rFl%2CjpooUC226mGq4%2C3; path=/
+    - PHPSESSID=QILVrJ1Uf94I1ZXXI4f-d1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:06:13 GMT
+recorded_at: Thu, 22 Jun 2017 20:52:20 GMT
