--- a/www.nass.gov.ng/48033bba3ab16859844f4b85d0d98756ae78a824.yml
+++ b/www.nass.gov.ng/48033bba3ab16859844f4b85d0d98756ae78a824.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:09:34 GMT
+    - Thu, 22 Jun 2017 20:54:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DXu-aELu7c68%2Cbo5%2CwKYD1; path=/
+    - PHPSESSID=OIeHljRCayr9zTtsVvAbd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:09:34 GMT
+recorded_at: Thu, 22 Jun 2017 20:54:32 GMT
