--- a/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
+++ b/www.nass.gov.ng/ddf2da29e12848a0a8deabb49851b8608c2ae342.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:12:09 GMT
+    - Thu, 22 Jun 2017 20:57:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DXVTqnbPWtpty94XqwK5t0; path=/
+    - PHPSESSID=92s0-tVo6EE%2CFdjQ5sWaS1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:12:09 GMT
+recorded_at: Thu, 22 Jun 2017 20:57:39 GMT
