--- a/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
+++ b/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:27:22 GMT
+    - Thu, 22 Jun 2017 21:14:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JROtUsyOtRyNz4oIU2Ed81; path=/
+    - PHPSESSID=oK1YB10j-RN%2CuV17hELfP0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:27:22 GMT
+recorded_at: Thu, 22 Jun 2017 21:14:05 GMT
