--- a/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
+++ b/www.nass.gov.ng/4d6c3cbe54405edd9c86ca311b68545aafd41559.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:32:00 GMT
+    - Thu, 22 Jun 2017 21:18:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rghmvqmvMTSRUf9iLcXJF2; path=/
+    - PHPSESSID=XTTESVSnrZ4n8aK4%2CnHf70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:32:00 GMT
+recorded_at: Thu, 22 Jun 2017 21:18:54 GMT
