--- a/www.nass.gov.ng/507e242ae024da5da132585b177ecc50b07d1321.yml
+++ b/www.nass.gov.ng/507e242ae024da5da132585b177ecc50b07d1321.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:38:21 GMT
+    - Thu, 22 Jun 2017 21:25:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=i%2Cc6L23QMLgSZxN22GO8h0; path=/
+    - PHPSESSID=qprCxBfREEgYF6yu8gQVt3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:38:22 GMT
+recorded_at: Thu, 22 Jun 2017 21:25:04 GMT
