--- a/www.nass.gov.ng/6f2bfc30402ce2ae085eb5155ed5eacdd4e70f18.yml
+++ b/www.nass.gov.ng/6f2bfc30402ce2ae085eb5155ed5eacdd4e70f18.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:39:56 GMT
+    - Thu, 22 Jun 2017 21:26:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kICVZVLJjMGAPjDburYkj3; path=/
+    - PHPSESSID=ja2Tgv%2CC%2CNpFzgV3vKeNj0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:39:57 GMT
+recorded_at: Thu, 22 Jun 2017 21:26:26 GMT
